--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "request-panel",
   "description": "A full request and response view for the Advanced REST client",
-  "version": "0.1.22",
+  "version": "0.2.0",
   "license": "Apache-2.0 OR CC-BY-4.0",
   "authors": [
     "The Advanced REST client authors <arc@mulesoft.com>"
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "polymer": "Polymer/polymer#^1.9.2",
-    "arc-status-bar": "advanced-rest-client/arc-status-bar#^0.1.1",
+    "arc-status-bar": "advanced-rest-client/arc-status-bar#^0.2.1",
     "request-editor": "advanced-rest-client/request-editor#^0.2.0",
     "response-view": "advanced-rest-client/response-view#^0.1.10",
     "paper-toast": "PolymerElements/paper-toast#<2",
@@ -29,7 +29,9 @@
     "events-target-behavior": "advanced-rest-client/events-target-behavior#^0.1.1",
     "paper-progress": "PolymerElements/paper-progress#<2",
     "uuid-generator": "advanced-rest-client/uuid-generator#^1.0.4",
-    "variables-evaluator": "advanced-rest-client/variables-evaluator#^0.1.8"
+    "variables-evaluator": "advanced-rest-client/variables-evaluator#^0.1.8",
+    "paper-icon-button": "PolymerElements/paper-icon-button#<2",
+    "paper-tooltip": "PolymerElements/paper-tooltip#<2"
   },
   "devDependencies": {
     "iron-component-page": "polymerelements/iron-component-page#1.0.0",
@@ -42,7 +44,9 @@
     "variables-evaluator": "advanced-rest-client/variables-evaluator#^0.1.1",
     "variables-manager": "advanced-rest-client/variables-manager#^0.1.8",
     "url-history-saver": "advanced-rest-client/url-history-saver#^0.1.1",
-    "cookie-jar": "advanced-rest-client/cookie-jar#^0.1.0"
+    "cookie-jar": "advanced-rest-client/cookie-jar#^0.1.0",
+    "arc-icons": "advanced-rest-client/arc-icons#^1.0.23",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#<2"
   },
   "ignore": [
     "**/.*",
