--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.9.2",
     "arc-status-bar": "advanced-rest-client/arc-status-bar#^0.2.1",
-    "request-editor": "advanced-rest-client/request-editor#^0.2.0",
+    "request-editor": "advanced-rest-client/request-editor#^0.3.0",
     "response-view": "advanced-rest-client/response-view#^0.1.10",
     "paper-toast": "PolymerElements/paper-toast#<2",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#<2",
@@ -46,7 +46,8 @@
     "url-history-saver": "advanced-rest-client/url-history-saver#^0.1.1",
     "cookie-jar": "advanced-rest-client/cookie-jar#^0.1.0",
     "arc-icons": "advanced-rest-client/arc-icons#^1.0.23",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#<2"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#<2",
+    "request-hooks-logic": "advanced-rest-client/request-hooks-logic#^0.1.1"
   },
   "ignore": [
     "**/.*",
