--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "oauth-authorization": "advanced-rest-client/oauth-authorization#^2.0.0",
     "chance": "^1.0.13",
     "app-pouchdb": "PolymerElements/app-pouchdb#^2.1.1",
-    "web-animations-js": "web-animations/web-animations-js#^2.3"
+    "web-animations-js": "web-animations/web-animations-js#^2.3",
+    "arc-electron-default-theme": "advanced-rest-client/arc-electron-default-theme#2.0.0-preview"
   },
   "ignore": [
     "**/.*",
