--- a/package.json
+++ b/package.json
@@ -1,69 +1,87 @@
 {
-  "description": "A full request and response view for the Advanced REST client",
+  "name": "@advanced-rest-client/request-panel",
+  "description": "A HTTP request editor",
+  "version": "3.0.0",
+  "license": "Apache-2.0",
+  "main": "request-panel.js",
   "keywords": [
-    "web-components",
-    "polymer"
+    "advanced-rest-client",
+    "settings"
+  ],
+  "authors": [
+    "Pawel Psztyc"
+  ],
+  "contributors": [
+    "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/request-panel.git"
   },
-  "name": "@advanced-rest-client/request-panel",
-  "version": "3.0.0-preview.3",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.3",
-    "@advanced-rest-client/arc-icons": "^3.0.0-preview.2",
-    "@advanced-rest-client/arc-models": "^3.0.0-preview.4",
-    "@advanced-rest-client/oauth-authorization": "^3.0.0-preview.3",
-    "@advanced-rest-client/variables-evaluator": "^3.0.0-preview.3",
-    "@advanced-rest-client/variables-manager": "^3.0.0-preview.1",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@polymer/gen-typescript-declarations": "^1.6.0",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.0",
-    "@polymer/iron-media-query": "^3.0.0",
-    "@polymer/paper-toast": "^3.0.0",
-    "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "babel-plugin-minify-mangle-names": "^0.5.0",
-    "browserify": "^16.2.3",
-    "chai": "^4.2.0",
-    "chance": "^1.0.18",
-    "fs-extra": "^7.0.1",
-    "jexl": "^2.1.1",
-    "mocha": "^5.2.0",
-    "sinon": "^7.3.2",
-    "uglify-js": "^3.5.15",
-    "wct-mocha": "^1.0.0",
-    "web-animations-js": "^2.3.1"
-  },
-  "main": "request-panel.js",
-  "scripts": {
-    "lint": "polymer lint request-panel.html",
-    "test-sauce": "polymer test --plugin sauce --job-name \"request-panel:local-test\"",
-    "test": "polymer test --plugin local",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
-    "prepare": "node dev-lib/prepare.js"
-  },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/request-panel/issues",
     "email": "arc@mulesoft.com"
   },
-  "authors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
-  ],
-  "contributors": [
-    "Pawel Psztyc",
-    "The Advanced REST client authors <arc@mulesoft.com>"
-  ],
   "dependencies": {
-    "@advanced-rest-client/events-target-mixin": "^3.0.0-preview.3",
-    "@advanced-rest-client/request-editor": "^3.0.0-preview.2",
-    "@advanced-rest-client/response-view": "^3.0.0-preview.3",
+    "@advanced-rest-client/events-target-mixin": "^3.0.0",
+    "@advanced-rest-client/request-editor": "^3.0.0",
+    "@advanced-rest-client/response-view": "^3.0.0",
     "@polymer/paper-progress": "^3.0.0",
-    "@polymer/polymer": "^3.0.0"
+    "lit-element": "^2.2.1"
+  },
+  "devDependencies": {
+    "@advanced-rest-client/arc-icons": "^3.0.0",
+    "@advanced-rest-client/arc-models": "^3.0.0-preview.11",
+    "@advanced-rest-client/oauth-authorization": "^3.0.0",
+    "@advanced-rest-client/variables-evaluator": "^3.0.0",
+    "@advanced-rest-client/variables-manager": "^3.0.0",
+    "@polymer/iron-media-query": "^3.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "browserify": "^16.2.3",
+    "chance": "^1.0.18",
+    "fs-extra": "^7.0.1",
+    "jexl": "^2.1.1",
+    "uglify-js": "^3.5.15",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.14",
+    "@advanced-rest-client/eslint-config": "^1.1.2",
+    "@advanced-rest-client/prettier-config": "^0.1.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.4",
+    "@anypoint-web-components/anypoint-checkbox": "^1.0.1",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/testing": "^2.3.3",
+    "@open-wc/testing-karma": "^3.1.29",
+    "@polymer/gen-typescript-declarations": "^1.6.2",
+    "@polymer/iron-test-helpers": "^3.0.1",
+    "deepmerge": "^4.0.0",
+    "es-dev-server": "^1.17.2",
+    "husky": "^1.0.0",
+    "lint-staged": "^9.2.5",
+    "sinon": "^7.4.2",
+    "web-animations-js": "^2.3.1"
+  },
+  "scripts": {
+    "test": "karma start --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
+    "lint:eslint": "eslint --ext .js,.html .",
+    "format:eslint": "eslint --ext .js,.html . --fix",
+    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
+    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --compatibility all --coverage",
+    "test:legacy:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
