chore: upgrading request editor to new version

--- a/package.json
+++ b/package.json
@@ -24,42 +24,43 @@
   },
   "dependencies": {
     "@advanced-rest-client/events-target-mixin": "^3.0.0",
-    "@advanced-rest-client/request-editor": "^3.1.2",
-    "@advanced-rest-client/response-view": "^3.0.2",
+    "@advanced-rest-client/request-editor": "^4.0.0",
+    "@advanced-rest-client/response-view": "^3.0.4",
     "@polymer/paper-progress": "^3.0.0",
     "lit-element": "^2.2.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.16",
-    "@advanced-rest-client/arc-icons": "^3.0.3",
+    "@advanced-rest-client/arc-demo-helper": "^1.0.17",
+    "@advanced-rest-client/arc-icons": "^3.0.4",
     "@advanced-rest-client/arc-models": "^3.0.3",
-    "@advanced-rest-client/eslint-config": "^1.1.3",
+    "@advanced-rest-client/eslint-config": "^1.1.4",
     "@advanced-rest-client/oauth-authorization": "^3.0.0",
     "@advanced-rest-client/prettier-config": "^0.1.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.6",
+    "@advanced-rest-client/testing-karma-sl": "^1.1.0",
     "@advanced-rest-client/variables-evaluator": "^3.0.0",
     "@advanced-rest-client/variables-manager": "^3.0.1",
-    "@anypoint-web-components/anypoint-checkbox": "^1.0.1",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@anypoint-web-components/anypoint-checkbox": "^1.0.2",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@open-wc/testing": "^2.3.8",
-    "@open-wc/testing-karma": "^3.1.46",
+    "@open-wc/testing": "^2.4.2",
+    "@open-wc/testing-karma": "^3.2.21",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-media-query": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.1",
     "babel-plugin-minify-mangle-names": "^0.5.0",
     "browserify": "^16.2.3",
-    "chance": "^1.1.3",
+    "chance": "^1.1.4",
+    "cryptojslib": "^3.1.2",
     "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.19.0",
+    "es-dev-server": "^1.32.0",
     "fs-extra": "^8.1.0",
-    "husky": "^3.0.9",
+    "husky": "^3.1.0",
     "jexl": "^2.1.1",
-    "lint-staged": "^9.4.2",
+    "lint-staged": "^9.5.0",
     "sinon": "^7.5.0",
-    "uglify-js": "^3.6.4",
+    "uglify-js": "^3.7.2",
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
@@ -76,7 +77,8 @@
     "test:watch": "karma start --auto-watch=true --single-run=false",
     "test:legacy": "karma start --compatibility all --coverage",
     "test:legacy:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility all --coverage",
+    "prepare": "node dev-lib/prepare.js"
   },
   "lint-staged": {
     "*.js": [
