--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^1.0.17",
+    "@advanced-rest-client/arc-demo-helper": "^2.1.3",
     "@advanced-rest-client/arc-icons": "^3.0.5",
     "@advanced-rest-client/arc-models": "^3.1.1",
     "@advanced-rest-client/eslint-config": "^1.1.5",
@@ -60,8 +60,7 @@
     "jexl": "^2.1.1",
     "lint-staged": "^10.1.0",
     "sinon": "^9.0.1",
-    "uglify-js": "^3.8.1",
-    "web-animations-js": "^2.3.1"
+    "uglify-js": "^3.8.1"
   },
   "scripts": {
     "test": "karma start --coverage",
